# mozart

./: Cargo.toml  Makefile  README.md  build.rs
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  code-coverage.yml  tests.yml
proto/: cache.proto
src/: cache.rs  error.rs  lib.rs  main.rs  prelude.rs  server.rs
src/cache/: common.rs  hashmap.rs  mod.rs
src/utils/: conversion.rs  mod.rs  shared.rs
tests/: cache.rs
