[package]
name = "mozart"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pacholoamit/mozart"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mozart-server"
path = "src/bin/server.rs"

[[bin]]
name = "mozart-client"
path = "src/bin/client.rs"

[dependencies]
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features= ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
cargo-docserver = "0.3.0"